Fixed button label alignment

--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -10,6 +10,9 @@
     overflow: hidden;
     border-radius: 1rem;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .buttonWithImageLeft {
